fix: fix text-align in navbar

--- a/src/frontend/timebuyers_app/src/static/CSS/Navbar.css
+++ b/src/frontend/timebuyers_app/src/static/CSS/Navbar.css
@@ -4,6 +4,7 @@
 
 .navbar-light .navbar-nav .nav-link{
     color: white;
+    text-align: center;
 }
 
 .navbar-nav a:hover {
